--- a/create_prototype/edit_student.html
+++ b/create_prototype/edit_student.html
@@ -28,8 +28,8 @@
                  aria-hidden="true">
                 <div class="modal-dialog modal-xl">
                     <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title font-weight-bold" id="exampleModalLabel" style="color: #1BB1DC">Chỉnh sửa thông tin
+                        <div class="modal-header" style="background-color: #1BB1DC">
+                            <h5 class="modal-title font-weight-bold" id="exampleModalLabel" style="color: black">Chỉnh sửa thông tin
                                 học sinh</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
@@ -54,7 +54,7 @@
                                             <div class="form-group col-md-6">
                                                 <label for="date" style="color: #1BB1DC" class="font-weight-bold">Ngày sinh<span
                                                         style="color: red">*</span> :</label>
-                                                <input type="date" class="form-control" id="date">
+                                                <input type="date" class="form-control" id="date" value="2021-10-16">
                                             </div>
                                         </div>
                                         <div class="form-row">
@@ -72,7 +72,7 @@
                                                 <label for="mother" style="color: #1BB1DC" class="font-weight-bold">Họ và tên mẹ<span
                                                         style="color: red">*</span> :
                                                 </label>
-                                                <input type="text" class="form-control" id="mother">
+                                                <input type="text" class="form-control" id="mother" placeholder="Nguyễn Văn C">
                                                 <div>
                                                     <small style="color: red">Tên không được để trống</small>
                                                     <!--                                                    <small style="color: red">Tên phải nhiều hơn 5 chữ cái</small>-->
@@ -97,7 +97,7 @@
                                             </div>
                                             <div class="form-group col-md-6">
                                                 <label for="religion" style="color: #1BB1DC" class="font-weight-bold">Tôn giáo: </label>
-                                                <input type="text" class="form-control" id="religion">
+                                                <input type="text" class="form-control" id="religion" placeholder="Phật giáo">
                                             </div>
                                         </div>
                                         <div class="form-row">
@@ -112,7 +112,7 @@
                                             <div class="form-group col-md-6">
                                                 <label for="nation" style="color: #1BB1DC" class="font-weight-bold">Dân tộc<span
                                                         style="color: red">*</span> : </label>
-                                                <input type="text" class="form-control" id="nation">
+                                                <input type="text" class="form-control" id="nation" placeholder="Kinh">
                                                 <div>
                                                     <small style="color: red">Dân tộc không được để trống</small>
                                                 </div>
